--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAizpPScCL2XazFKeIYHCRJIZtrIX7i8BI&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAizpPScCL2XazFKeIYHCRJIZtrIX7i8BI"
     async defer></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
